# TwitterVideoTools

./: .gitignore  LICENSE  README.md  main.py  monkey_patch_invoke.py  pyproject.toml  tasks.py
.github/workflows/: release.yaml  test.yaml
.type_stubs/youtube_dl/: YoutubeDL.pyi  __init__.pyi  options.pyi  utils.pyi
.type_stubs/youtube_dl/downloader/: __init__.pyi  common.pyi  f4m.pyi  hls.pyi  rtsp.pyi
.type_stubs/youtube_dl/extractor/: __init__.pyi  abc.pyi  acast.pyi  adobeconnect.pyi  adobetv.pyi  aenetworks.pyi  afreecatv.pyi  airmozilla.pyi  aljazeera.pyi  allocine.pyi  amara.pyi  amp.pyi  animeondemand.pyi  anvato.pyi  apa.pyi  aparat.pyi  appleconnect.pyi  appletrailers.pyi  archiveorg.pyi  arnes.pyi  arte.pyi  asiancrush.pyi  atresplayer.pyi  atvat.pyi  audimedia.pyi  aws.pyi  bandcamp.pyi  beatport.pyi  bellmedia.pyi  bfi.pyi  bigflix.pyi  bilibili.pyi  bpb.pyi  bravotv.pyi  breakcom.pyi  businessinsider.pyi  c56.pyi  camdemy.pyi  camwithher.pyi  canalplus.pyi  (+241 more)
.type_stubs/youtube_dl/postprocessor/: __init__.pyi  execafterdownload.pyi  metadatafromtitle.pyi  xattrpp.pyi
.type_stubs/yt_dlp/: YoutubeDL.pyi  __init__.pyi  __main__.pyi  aes.pyi  cache.pyi  cookies.pyi  dependencies.pyi  jsinterp.pyi  minicurses.pyi  options.pyi  socks.pyi  update.pyi  utils.pyi  version.pyi  webvtt.pyi
.type_stubs/yt_dlp/compat/: __init__.pyi  _deprecated.pyi  _legacy.pyi  compat_utils.pyi  functools.pyi  imghdr.pyi  shutil.pyi
.type_stubs/yt_dlp/downloader/: __init__.pyi  common.pyi  dash.pyi  external.pyi  f4m.pyi  fc2.pyi  fragment.pyi  hls.pyi  http.pyi  ism.pyi  mhtml.pyi  niconico.pyi  rtmp.pyi  websocket.pyi  youtube_live_chat.pyi
.type_stubs/yt_dlp/extractor/: __init__.pyi  abc.pyi  abcotvs.pyi  abematv.pyi  academicearth.pyi  acfun.pyi  adn.pyi  adobetv.pyi  aeonco.pyi  afreecatv.pyi  agora.pyi  aljazeera.pyi  alsace20tv.pyi  alura.pyi  amazon.pyi  angel.pyi  ant1newsgr.pyi  anvato.pyi  aol.pyi  apa.pyi  aparat.pyi  archiveorg.pyi  ard.pyi  arkena.pyi  arte.pyi  atscaleconf.pyi  atttechchannel.pyi  atvat.pyi  audiodraft.pyi  audiomack.pyi  audius.pyi  awaan.pyi  baidu.pyi  banbye.pyi  bandaichannel.pyi  bandcamp.pyi  bannedvideo.pyi  bbc.pyi  berufetv.pyi  bfmtv.pyi  (+583 more)
.type_stubs/yt_dlp/postprocessor/: __init__.pyi  common.pyi  embedthumbnail.pyi  exec.pyi  ffmpeg.pyi  metadataparser.pyi  modify_chapters.pyi  movefilesafterdownload.pyi  sponskrub.pyi  sponsorblock.pyi  xattrpp.pyi
.typings/youtube_dl/: aes.pyi  cache.pyi  compat.pyi  jsinterp.pyi
.typings/youtube_dl/downloader/: dash.pyi  external.pyi  fragment.pyi  http.pyi  ism.pyi
.typings/youtube_dl/extractor/: abcnews.pyi  adn.pyi  adultswim.pyi  amcnetworks.pyi  applepodcasts.pyi  arcpublishing.pyi  arkena.pyi  beeg.pyi  behindkink.pyi  bet.pyi  bibeltv.pyi  biqle.pyi  bitchute.pyi  bleacherreport.pyi  bongacams.pyi  bostonglobe.pyi  br.pyi  byutv.pyi  canvas.pyi  cartoonnetwork.pyi  cbslocal.pyi  charlierose.pyi  chilloutzone.pyi  cinemax.pyi  cjsw.pyi  cliprs.pyi  clipsyndicate.pyi  clubic.pyi  cmt.pyi  comedycentral.pyi  common.pyi  crooksandliars.pyi  dbtv.pyi  digiteka.pyi  dlive.pyi  dotsub.pyi  dumpert.pyi  egghead.pyi  ehow.pyi  elpais.pyi  (+177 more)
.typings/youtube_dl/postprocessor/: ffmpeg.pyi
models/: __init__.py  settings.py
tests/: test_sample.py
twitter_video_tools/: __init__.py  __main__.py  platform_video_downloader.py  twitter_crawler.py  twitter_video_tools.py  video_downloader.py
twitter_video_tools/tests/: test_monsnode_parser.py
twitter_video_tools/utils/: __init__.py  execute_parallel.py  monsnode_parser.py  platform_video_downloader.py  url_validator.py  video_downloader.py  youtube_dl_wrapper.py
twitter_video_tools/utils/tests/: test_monsnode_parser.py
typings/youtube_dl/: YoutubeDL.pyi  __main__.pyi  swfinterp.pyi  update.pyi
typings/youtube_dl/extractor/: adobepass.pyi  aliexpress.pyi  alphaporno.pyi  americastestkitchen.pyi  audioboom.pyi  azmedien.pyi  bbc.pyi  box.pyi  camtube.pyi  cbs.pyi  ccma.pyi  ceskatelevize.pyi  cnbc.pyi  coub.pyi  crackle.pyi  ctv.pyi  daum.pyi  democracynow.pyi  dplay.pyi  drbonanza.pyi  eagleplatform.pyi  engadget.pyi  eroprofile.pyi  expressen.pyi  folketinget.pyi  formula1.pyi  frontendmasters.pyi  gedidigital.pyi  hidive.pyi  hitbox.pyi  huajiao.pyi  hypem.pyi  indavideo.pyi  instagram.pyi  jeuxvideo.pyi  jwplatform.pyi  kankan.pyi  kinja.pyi  krasview.pyi  lbry.pyi  (+75 more)
typings/youtube_dl/postprocessor/: common.pyi  embedthumbnail.pyi
utils/: __init__.py  execute_parallel.py  get_settings.py  monsnode_parser.py  twitter_crawler.py  video_downloader.py  youtube_dl_wrapper.py
utils/tests/: test_monsnode_parser.py
